--- a/octoprint_reconnect_guru/templates/reconnect_guru_settings.jinja2
+++ b/octoprint_reconnect_guru/templates/reconnect_guru_settings.jinja2
@@ -1,7 +1,7 @@
 <div class="control-group">
     <label class="checkbox">
         <input type="checkbox"
-               data-bind="checked: settings.plugins.reconnectguru.enabled">
+               data-bind="checked: settings.plugins.reconnect_guru.enabled">
         Enable automatic reconnection
     </label>
 </div>
@@ -9,7 +9,7 @@
 <div class="control-group">
     <label>Connection delay after device detection (seconds)</label>
     <input type="number" min="0" class="input-small"
-           data-bind="value: settings.plugins.reconnectguru.connect_delay_seconds">
+           data-bind="value: settings.plugins.reconnect_guru.connect_delay_seconds">
     <p class="help-block">
         Time to wait after device is detected before attempting connection
     </p>
@@ -24,19 +24,19 @@
 <div class="control-group">
     <label>Vendor ID (e.g., 1a86)</label>
     <input type="text" class="input-medium"
-           data-bind="value: settings.plugins.reconnectguru.filter_vendor_id">
+           data-bind="value: settings.plugins.reconnect_guru.filter_vendor_id">
 </div>
 
 <div class="control-group">
     <label>Product ID (e.g., 7523)</label>
     <input type="text" class="input-medium"
-           data-bind="value: settings.plugins.reconnectguru.filter_product_id">
+           data-bind="value: settings.plugins.reconnect_guru.filter_product_id">
 </div>
 
 <div class="control-group">
     <label>Serial Number</label>
     <input type="text" class="input-medium"
-           data-bind="value: settings.plugins.reconnectguru.filter_serial">
+           data-bind="value: settings.plugins.reconnect_guru.filter_serial">
     <p class="help-block">
         Match device serial number (leave empty if device has no serial)
     </p>
@@ -45,7 +45,7 @@
 <div class="control-group">
     <label>USB Port (e.g., 1.2 or 1.1.3)</label>
     <input type="text" class="input-medium"
-           data-bind="value: settings.plugins.reconnectguru.filter_port">
+           data-bind="value: settings.plugins.reconnect_guru.filter_port">
     <p class="help-block">
         Match specific USB port on Raspberry Pi
     </p>
