Add message on connect feature

--- a/octoprint_reconnect_guru/templates/reconnect_guru_settings.jinja2
+++ b/octoprint_reconnect_guru/templates/reconnect_guru_settings.jinja2
@@ -50,3 +50,11 @@
         Match specific USB port on Raspberry Pi
     </p>
 </div>
+
+<div class="control-group">
+    <label class="checkbox">
+        <input type="checkbox"
+               data-bind="checked: settings.plugins.reconnect_guru.message_on_connect">
+        Send M117 message on connect
+    </label>
+</div>
